fix(multiedit): fix ux issues
- multiedit popup is too narrow
- make save btn disabled after saving

SD-1489

--- a/app/styles/less/dropdowns.less
+++ b/app/styles/less/dropdowns.less
@@ -228,7 +228,7 @@
 		border:0;
 		z-index: 1;
 		margin-top: -1px;
-		min-width: 200px;
+		min-width: 245px;
 		box-shadow: 0px 1px 2px 1px #aaa;
 		padding: 10px 0;
 		&:before {
